--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body{
     height: 100%;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #f8cc53;
+}
+
 header{
     width: 100%;
     height: 35px;
