--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 70px;
 }
 
 .content{
@@ -581,4 +582,30 @@ footer p {
         padding: 10px 15px;
         font-size: 15px;
     }
+}
+
+.timer{
+    position: fixed;
+    top: 0px;
+    left: 0;
+    background-color:#f8cc53;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    padding: 5px 0;
+    box-shadow: 1px 1px 5px black;
+}
+
+.timer p{
+    font-size: 13px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 8px;
+}
+
+#timer{
+    font-size: 18px;
+    margin-bottom: 8px;
 }
